v0.1.2 (XXX)
- Require the gem version of cairo, and >= 1.6.3 to avoid FATAL error under 1.8.7
- Allow the render functions to be called multiple times

v0.1.1 (Unreleased)
- use a proxy object when building repeating objects to prevent a new page being started

v0.1.0 (28th May 2008)
- added PDF::Wrapper#translate and PDF::Wrapper#scale
- fixed a bug that caused some text to be rendered off the page when wrapping onto 3rd and 
  subsequent pages
- Improved table support using a new class PDF::Wrapper::Table
- Added a :center option to Wrapper#image
- Added a :markup option to text related functions. Pango markup can be used to tweak 
  text style (bold, italics, super script, etc)
- Replaced PDF::Wrapper#rounded_rectangle with the :radius option to PDF::Wrapper#rectangle
- Allow cells to have a border with rounded corners

v0.0.7 (30th April 2008)
- Added support for creating new pages from a template file (pdf/png/jpg/gif/svg/probably more)
- Convert the params to start_new_page to be an options hash
- Added a :padding option to PDF::Wrapper#image

v0.0.6 (28th April 2008)
- Fix a nasty bug in text layout code

v0.0.5 (27th April 2008)
- Fix crash when inserting multiple images
- added PDF::Wrapper#pad
- added PDF::Wrapper#text_width
- added support for customisable page margins (thanks to Paweł Kondzior)
- added support for cubic Bezier spline paths (thanks to Paweł Kondzior)
- added support for specifying the width of a cell border (thanks to Paweł Kondzior)
- fixed alignment of text (thanks to Paweł Kondzior)

v0.0.4 (12th March 2008)
- added support for custom line widths on primitive drawing shapes (circles,
  lines, etc). Thanks Paweł Kondzior
- fixed a bug where the first line of text in a multi-line cell appeared at the
  current cursor location instead of inside the cell. Thanks Paweł Kondzior
- bumped dependency on PDF::Reader for running specs to 0.6.1

v0.0.3 (17th January 2008)